# uika

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  uika.config.toml.example
docs/: CRATES_IO_PUBLISH.md
example_game/: Cargo.toml
example_game/src/: game_demo.rs  lib.rs  test_integration.rs
tools/: publish.sh
ue_plugin/Uika/Source/Uika/Private/: UUikaReifiedClass.cpp  UUikaReifiedFunction.cpp  UikaDelegateApiImpl.cpp  UikaDelegateProxy.cpp  UikaLifecycleApiImpl.cpp  UikaModule.cpp  UikaReifyApiImpl.cpp  UikaWidgetApiImpl.cpp  UikaWorldApiImpl.cpp
ue_plugin/Uika/Source/Uika/Public/: UUikaReifiedFunction.h  UikaApiTable.h  UikaModule.h
ue_plugin/UikaGenerator/Source/UikaGenerator/: UikaGenerator.Build.cs
uika/: Cargo.toml
uika-api-parse/: Cargo.toml
uika-api-parse/src/: lib.rs
uika-bindings/: .gitignore  Cargo.toml
uika-bindings/src/: lib.rs
uika-bindings/src/manual/: color.rs  fkey.rs  linear_color.rs  mod.rs  plane.rs  quat.rs  rotator.rs  transform.rs  ue_box2d.rs  vector.rs  vector2d.rs  vector4.rs  widget_ext.rs  world_ext.rs
uika-cli/: Cargo.toml  build.rs
uika-cli/src/: build_cmd.rs  main.rs  setup.rs  sync_plugin.rs
uika-cli/ue_plugin_embed/Uika/: Uika.uplugin
uika-cli/ue_plugin_embed/Uika/Source/Uika/: Uika.Build.cs
uika-cli/ue_plugin_embed/Uika/Source/Uika/Private/: UikaContainerApiImpl.cpp  UikaContractTests.cpp  UikaCoreApiImpl.cpp  UikaDelegateApiImpl.cpp  UikaModule.cpp  UikaPropertyApiImpl.cpp  UikaReflectionApiImpl.cpp  UikaWorldApiImpl.cpp
uika-cli/ue_plugin_embed/Uika/Source/Uika/Public/: UUikaReifiedClass.h  UikaApiTable.h  UikaDelegateProxy.h  UikaFNameHelper.h
uika-cli/ue_plugin_embed/UikaGenerator/: UikaGenerator.uplugin
uika-cli/ue_plugin_embed/UikaGenerator/Source/UikaExporter/: UikaExport.cs  UikaExporter.ubtplugin.csproj
uika-cli/ue_plugin_embed/UikaGenerator/Source/UikaGenerator/: UikaGeneratorDummy.h  UikaGeneratorModule.cpp
uika-codegen/: Cargo.toml
uika-codegen/src/: config.rs  context.rs  defaults.rs  filter.rs  lib.rs  naming.rs  schema.rs  type_map.rs
uika-codegen/src/cpp_gen/: fill_table.rs  func_ids.rs  mod.rs  wrapper.rs
uika-codegen/src/rust_gen/: cargo_toml.rs  classes.rs  delegates.rs  enums.rs  func_ids.rs  mod.rs  module.rs  param_helpers.rs  properties.rs  structs.rs  wasm_gen.rs
uika-ffi/: Cargo.toml
uika-ffi/src/: api_table.rs  callbacks.rs  contract_tests.rs  error.rs  handles.rs  lib.rs  reify_types.rs
uika-macros/: Cargo.toml
uika-macros/src/: lib.rs  prop_type.rs  uclass.rs  uclass_impl.rs
uika-runtime/: Cargo.toml  build.rs
uika-runtime/src/: api.rs  containers.rs  delegate_registry.rs  dynamic_call.rs  error.rs  ffi_guard.rs  fkey.rs  fname.rs  lib.rs  logging.rs  object_ref.rs  pinned.rs  reify_registry.rs  struct_ref.rs  traits.rs  ue_math.rs  weak_ptr.rs  widget.rs  world.rs
uika-ue-flags/: Cargo.toml
uika-ue-flags/src/: lib.rs
uika-wasm-host/: Cargo.toml  build.rs  native_ptr_overrides.toml
uika-wasm-host/src/: callbacks.rs  dll_path.rs  lib.rs  wasm_host.rs
uika/src/: game_demo.rs  lib.rs  prelude.rs
