[package]
name = "uika-api-parse"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Parses uika-ffi api_table.rs to extract sub-table function signatures (build-dep only)"

[dependencies]
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
