[package]
name = "uika-bindings"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generated UE type bindings and manual extensions for uika"

[dependencies]
uika-runtime = { version = "0.1.0", path = "../uika-runtime" }
uika-ffi = { version = "0.1.0", path = "../uika-ffi" }
glam = "0.29"

[features]
default = []
core = []
engine = ["core"]
physics-core = ["engine"]
input = ["core"]
slate = ["core"]
umg = ["slate"]
niagara = ["engine"]
gameplay-abilities = ["engine"]
level-sequence = ["engine"]
cinematic = ["engine"]
movie = ["engine"]
