[package]
name = "uika-bindings"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generated UE type bindings and manual extensions for uika"

[dependencies]
uika-runtime = { version = "0.1.0", path = "../uika-runtime" }
uika-ffi = { version = "0.1.0", path = "../uika-ffi" }
glam = "0.29"

[features]
default = ["core"]
cinematic = ["engine"]
core = []
engine = ["core", "input", "slate", "umg"]
gameplay-abilities = ["engine"]
input = []
level-sequence = ["engine"]
movie = ["engine"]
niagara = ["engine"]
physics-core = ["engine"]
slate = ["core", "input"]
umg = ["core", "engine", "input", "slate"]
