[package]
name = "uika-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for uika: codegen, project setup, and build orchestration"
build = "build.rs"
include = ["src/**", "build.rs", "Cargo.toml", "ue_plugin_embed/**"]

[dependencies]
uika-codegen = { version = "0.1.0", path = "../uika-codegen" }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
