[package]
name = "uika-codegen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Code generator: UHT JSON to Rust bindings and C++ wrappers for uika"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uika-ue-flags = { version = "0.1.0", path = "../uika-ue-flags" }
