[package]
name = "uika-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc macros (#[uclass], #[ufunction], #[uproperty]) for uika"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
